= master

* Make run_append_slash and run_handler plugins work when used together (janko) (#185)

* Make :header matcher in header_matchers plugin work for Content-Type and Content-Length (jeremyevans) (#184)

= 3.29.0 (2020-02-14)

* Remove specs and old release notes from the gem to reduce gem size by over 35% (jeremyevans)

* Raise RodaError if trying to load a plugin that is not a module (jeremyevans)

* Include SCRIPT_NAME when logging in common logger plugin (jeremyevans)

* Handle invalid POST data when using the exception_page plugin (jeremyevans)

= 3.28.0 (2020-01-15)

* Add session_created_at and session_updated_at methods to the sessions plugin (jeremyevans)

* Make upgrading from rack session cookie in sessions plugin work with rack 2.0.8 (jeremyevans)

* Make json_parser parse request body as json even if request body has already been read (jeremyevans)

= 3.27.0 (2019-12-13)

* Allow json_parser return correct result for invalid JSON if the params_capturing plugin is used (jeremyevans) (#180)

* Add multibyte_string_matcher plugin for matching multibyte characters (jeremyevans)

* Split roda.rb into separate files (janko) (#177)

= 3.26.0 (2019-11-18)

* Combine multiple asset files with a newline when compiling them, avoiding corner cases with comments (ameuret) (#176)

* Add asychronous streaming support to the streaming plugin (janko) (#175)

= 3.25.0 (2019-10-15)

* Support change in tilt 2.0.10 private API to continue to support compiled templates, with up to 33% performance improvement (jeremyevans)

* Improve render performance with :locals option up to 75% by calling compiled template methods directly (jeremyevans)

= 3.24.0 (2019-09-13)

* Fix Proc.new warning in module_include plugin on Ruby 2.7+ (jeremyevans)

* Improve render_each performance by calling compiled template methods directly (jeremyevans)

= 3.23.0 (2019-08-13)

* Make roda/session_middleware work if type_routing plugin is loaded into Roda itself (jeremyevans) (#169)
